welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:7: error: not found: value reutrn
  else if (a>b) {reutrn a}
                 ^